--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="phone1.css">
     <link rel="stylesheet" href="phone2.css">
     <link rel="stylesheet" href="phone3.css">
+    <link rel="stylesheet" href="tablet.css">
 </head>
 <body>
   <nav class="navbar">
