--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <li>Tech<span style="color: yellow; font-size: 40px;">.</span></li>
         <ul>
            <li>Amazon Clone -<span style="color: black;">_</span><a href="https://aashishjogi.github.io/Amazon.com/" style="font-size: 15px; ">Visit</a><span style="color: black;">_</span><a href="https://github.com/Aashishjogi/Amazon.com" target="_blank"><i class="fa-brands fa-github"  style="color: white; font-size: 14px;"></i></a></li>
-           <li>Netflix Clone -<span style="color: black;">_</span><a href="#" style="font-size: 15px;">Visit</a><span style="color: black;">_</span><a href="#" target="_blank"><i class="fa-brands fa-github"  style="color: white; font-size: 14px;"></i></a></li>
-        </ul>
+<!--            <li>Netflix Clone -<span style="color: black;">_</span><a href="#" style="font-size: 15px;">Visit</a><span style="color: black;">_</span><a href="#" target="_blank"><i class="fa-brands fa-github"  style="color: white; font-size: 14px;"></i></a></li>
+        </ul> -->
         <li>Non Tech<span style="color: yellow; font-size: 40px;">.</span></li>
         <ul>
            <li>Light automation</li>
